# sunder

./: .gitignore  Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
crates/kalandra-core/: Cargo.toml
crates/kalandra-core/src/: connection.rs  env.rs  error.rs  lib.rs  room_manager.rs  sequencer.rs  transport.rs
crates/kalandra-core/src/mls/: constants.rs  group.rs  mod.rs  provider.rs  validator.rs
crates/kalandra-core/src/storage/: memory.rs
crates/kalandra-core/tests/: chaos_connection.rs  connection_properties.proptest-regressions  connection_properties.rs  frame_snapshots.rs
crates/kalandra-core/tests/snapshots/: frame_snapshots__snapshot_ban_frame.snap  frame_snapshots__snapshot_ban_frame_permanent.snap  frame_snapshots__snapshot_commit_frame.snap  frame_snapshots__snapshot_encrypted_message_frame.snap  frame_snapshots__snapshot_error_frame.snap  frame_snapshots__snapshot_error_frame_with_retry.snap  frame_snapshots__snapshot_goodbye_frame.snap  frame_snapshots__snapshot_hello_frame.snap  frame_snapshots__snapshot_hello_frame_with_auth_token.snap  frame_snapshots__snapshot_hello_frame_with_capabilities.snap  frame_snapshots__snapshot_hello_reply_frame.snap  frame_snapshots__snapshot_hello_reply_frame_with_challenge.snap  frame_snapshots__snapshot_key_package_frame.snap  frame_snapshots__snapshot_kick_frame.snap  frame_snapshots__snapshot_ping_frame.snap  frame_snapshots__snapshot_pong_frame.snap  frame_snapshots__snapshot_proposal_frame.snap  frame_snapshots__snapshot_reaction_frame.snap  frame_snapshots__snapshot_receipt_frame.snap  frame_snapshots__snapshot_redact_frame.snap  frame_snapshots__snapshot_welcome_frame.snap
crates/kalandra-harness/: Cargo.toml
crates/kalandra-harness/src/: lib.rs  sim_env.rs  sim_transport.rs
crates/kalandra-harness/src/scenario/: actor.rs  builder.rs  mod.rs  oracle.rs  world.rs
crates/kalandra-harness/tests/: client_e2e_test.rs  connection_lifecycle_test.rs  determinism_test.rs  fault_injection_test.rs  mls_group_test.rs  optimality_test.rs  ping_pong_test.rs  scenario_example_test.rs  scenario_handshake_test.rs  scenario_timeout_test.rs  sequencer_test.rs
crates/kalandra-proto/: Cargo.toml
crates/kalandra-proto/proptest-regressions/: frame.txt
crates/kalandra-proto/src/: errors.rs  flags.rs  frame.rs  header.rs  lib.rs  opcodes.rs
crates/kalandra-proto/src/payloads/: app.rs  mls.rs  mod.rs  moderation.rs  session.rs
crates/sunder-core/: Cargo.toml
crates/sunder-core/src/: env.rs  lib.rs  transport.rs
crates/sunder-core/src/mls/: error.rs  group.rs  mod.rs  provider.rs
crates/sunder-harness/src/: lib.rs  sim_env.rs  sim_transport.rs
crates/sunder-harness/tests/: ping_pong.rs
crates/sunder-proto/src/: errors.rs  flags.rs  lib.rs  opcodes.rs
docs/: ARCHITECTURE.md  CLIENT.md  PROTOCOL.md  ROADMAP.md  SERVER.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: frame_exhaustive.rs
