[package]
name = "kalandra-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
kalandra-proto = { path = "../kalandra-proto" }
bincode = "1.3"

# Serialization (for storage)
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
bytes = "1.11"

# Async traits (no runtime dependency)
async-trait = "0.1"

# Time and duration
tokio = { version = "1", default-features = false, features = ["io-util", "time"] }

# Error handling
thiserror = "2.0"

# Structured logging
tracing = "0.1"

# MLS (Messaging Layer Security) - OpenMLS for synchronous Sans-IO API
openmls = "0.7"
openmls_traits = "0.4"
openmls_rust_crypto = "0.4"
openmls_basic_credential = "0.4"
openmls_memory_storage = "0.4"
rand = "0.8"

[dev-dependencies]
# Property-based testing
proptest = "1.5"

# Snapshot testing
insta = "1.41"
hex = "0.4"

[lints]
workspace = true
