[package]
name = "kalandra-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
kalandra-core = { path = "../kalandra-core" }
kalandra-proto = { path = "../kalandra-proto" }

# Async trait support
async-trait = "0.1"

# Deterministic simulation
turmoil = "0.7.0"

# Async runtime (minimal features, turmoil provides the runtime)
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "time"] }

# Seeded RNG for determinism
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
# Client for E2E tests
kalandra-client = { path = "../kalandra-client" }

# For test assertions
bytes = "1.9"

# Property-based testing
proptest = "1.5"

[lints]
workspace = true
