[package]
name = "kalandra-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

missing_const_for_fn = "allow"
missing_enforced_import_renames = "allow"
doc_markdown = "allow"
disallowed_macros = "allow"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

inefficient_to_string = "deny"
unnecessary_self_imports = "deny"
unused_async = "deny"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
ciborium = "0.2"
bitflags = { version = "2.6", features = ["serde"] }
thiserror = "2.0"
zerocopy = { version = "0.8", features = ["derive"] }
bytes = "1.9"

[dev-dependencies]
proptest = "1.5"
hex-literal = "1.1"
